add tags navigator

--- a/config.toml
+++ b/config.toml
@@ -28,6 +28,11 @@ enableGitInfo = true
   identifier = "post"
   url = "/post/"
 [[menu.main]]
+  name = "标签"
+  weight = 22
+  identifier = "tags"
+  url = "/tags/"
+[[menu.main]]
   name = "关于"
   weight = 30
   identifier = "about"
