--- a/config.toml
+++ b/config.toml
@@ -50,14 +50,14 @@ enableGitInfo = true
 #### 公告栏 -- Bulletin Board
 1. 招募 [Podcast 嘉宾](https://github.com/emacstalk/joinus)，分享您与 Emacs 的故事
 2. 欢迎[投稿](https://github.com/EmacsTalk/emacstalk.github.io/issues/new)，与大家一起分享 Emacs 使用技巧
-3. 如果 EmacsTalk 对您有所帮助，欢迎进行[发电支持](https://mp.weixin.qq.com/s/zWyW5t46KuSEl6usoCifsw) ❤️
+3. 如果 EmacsTalk 对您有所帮助，欢迎进行[发电支持](/donate) ❤️
 """
     contactus = """
 -   微信搜索公众号[「EmacsTalk」](/images/weixin.jpg)
 -   QQ 听友群：[530146104](https://jq.qq.com/?_wv=1027&k=9tAXJ8gG)
 -   TG 听友群：<https://t.me/emacstalk>
 -   收听方式见：<https://emacstalk.github.io/>
--   如果您喜欢这档节目，欢迎通过[「❤️发电」](https://afdian.net/@emacstalk)来支持
+-   如果您喜欢这档节目，欢迎通过[「❤️发电」](https://afdian.net/@coding-xigua)来支持
 """
     dateformat = "2006-01-02"
     description = "EmacsTalk 是一档专注在 Emacs 社区的程序员闲聊节目。官网：emacstalk.github.io。M-x thanks-for-listening"
