--- a/config.toml
+++ b/config.toml
@@ -38,10 +38,10 @@ enableGitInfo = true
   identifier = "about"
   url = "/about/"
 [[menu.main]]
-  name = "🔥 爱发电 🔥"
+  name = "打赏"
   weight = 50
   identifier = "afdian"
-  url = "/donate"
+  url = "https://liujiacai.net/donate/"
 
 [params]
     logo = true
@@ -49,7 +49,7 @@ enableGitInfo = true
     fadian = """
 #### 如果 EmacsTalk 对您有所帮助
 - 欢迎在各大播客平台留言、打分、转发
-- 也欢迎您为本节目进行[捐助支持](/donate) ❤️
+- 也欢迎您为本节目进行[打赏支持](https://liujiacai.net/donate/) ❤️
 """
     contactus = """
 -   微信搜索公众号[「EmacsTalk」](/images/weixin.jpg)
